[project]
name = "tina4-python"
version = "0.2.153"
description = "Tina4Python - This is not another framework for Python"
authors = [
    {name = "Andre van Zuydam",email = "andrevanzuydam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jinja2>=3.1.5,<4.0.0",
    "libsass (>=0.23.0,<0.24.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "litequeue (>=0.9,<0.10)",
    "simple-websocket (>=1.1.0,<2.0.0)",
    "asyncer>=0.0.8",
    "hypercorn>=0.18.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "jurigged>=0.6.0",
    "mkdocs>=1.6.1",
    "mysql-connector-python>=9.3.0",
    "psycopg2-binary>=2.9.10",
    "pydoc-markdown>=4.8.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "python-keycloak>=5.8.1",
    "ruff>=0.11.9",
    "safety>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "tina4_python/**/*"
]

[project.scripts]
tina4 = "tina4_python.cli:main"

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = [ "./tina4_python" ]

[tool.pydoc-markdown.renderer]
type = "mkdocs"
site_name= "Tina4Python"

[[tool.pydoc-markdown.renderer.pages]]
title = "API Documentation"
name = "index"

contents = [ "*" ]

