[project]
name = "tina4-python"
version = "3.0.0-dev"
description = "Tina4 Python v3 — Zero-dependency, lightweight web framework"
authors = [
    {name = "Andre van Zuydam", email = "andrevanzuydam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

# ZERO core dependencies — this is v3's defining feature
dependencies = []

[project.optional-dependencies]
# Database drivers — install what you need
postgres = ["psycopg2-binary>=2.9"]
mysql = ["mysql-connector-python>=9.0"]
mssql = ["pymssql>=2.3"]
firebird = ["firebird-driver>=1.10"]
mongo = ["pymongo>=4.0"]
odbc = ["pyodbc>=5.0"]

# Session backends — install what you need
redis = ["redis>=5.0"]
memcache = ["pymemcache>=4.0"]

# All database drivers
all-db = [
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=9.0",
    "pymssql>=2.3",
    "firebird-driver>=1.10",
    "pymongo>=4.0",
    "pyodbc>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["tina4_python/**/*"]

[project.scripts]
tina4python = "tina4_python.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
