[project]
name = "tina4-python"
version = "3.10.34"
description = "Tina4 Python v3 — Zero-dependency, lightweight web framework"
authors = [
    {name = "Andre van Zuydam", email = "andrevanzuydam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

# ZERO core dependencies — this is v3's defining feature
dependencies = []

[project.optional-dependencies]
# Database drivers — install what you need
postgres = ["psycopg2-binary>=2.9"]
mysql = ["mysql-connector-python>=9.0"]
mssql = ["pymssql>=2.3"]
firebird = ["firebird-driver>=1.10"]
mongo = ["pymongo>=4.0"]
odbc = ["pyodbc>=5.0"]

# Session backends — install what you need
redis = ["redis>=5.0"]
memcache = ["pymemcache>=4.0"]

# All database drivers
all-db = [
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=9.0",
    "pymssql>=2.3",
    "firebird-driver>=1.10",
    "pymongo>=4.0",
    "pyodbc>=5.0",
]

[dependency-groups]
dev = [
    "bottle>=0.13.4",
    "cython>=3.2.4",
    "django>=6.0.3",
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "reportlab>=4.4.10",
    "ruff>=0.4",
    "setuptools>=82.0.1",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["tina4_python/**/*"]

[project.scripts]
tina4python = "tina4_python.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
