[metadata]
name = tina4-python
version = 0.0.1
author = Andre van Zuydam
author_email = info@tina4.com
description = Tina4 Python - This is not another framework for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tina4stack/tina4-python
project_urls =
    Bug Tracker = https://github.com/tina4stack/tina4-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tina4_python
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = tina4_python